chore: regenerate release step with signing fixes
See https://github.com/siderolabs/kres/pull/534

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-07-22T04:25:57Z by kres b869533.
+# Generated on 2025-07-23T08:53:56Z by kres 4c6b4c0.
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -5004,32 +5004,32 @@ jobs:
         uses: sigstore/cosign-installer@v3
       - name: Sign artifacts
         run: |
-          cosign sign-blob --output _out/cloud-images.json.sig --yes _out/cloud-images.json
-          cosign sign-blob --output _out/initramfs-amd64.xz.sig --yes _out/initramfs-amd64.xz
-          cosign sign-blob --output _out/initramfs-arm64.xz.sig --yes _out/initramfs-arm64.xz
-          cosign sign-blob --output _out/metal-amd64.iso.sig --yes _out/metal-amd64.iso
-          cosign sign-blob --output _out/metal-arm64.iso.sig --yes _out/metal-arm64.iso
-          cosign sign-blob --output _out/metal-amd64-uki.efi.sig --yes _out/metal-amd64-uki.efi
-          cosign sign-blob --output _out/metal-arm64-uki.efi.sig --yes _out/metal-arm64-uki.efi
-          cosign sign-blob --output _out/metal-amd64.raw.zst.sig --yes _out/metal-amd64.raw.zst
-          cosign sign-blob --output _out/metal-arm64.raw.zst.sig --yes _out/metal-arm64.raw.zst
-          cosign sign-blob --output _out/talos-arm64.spdx.json.sig --yes _out/talos-arm64.spdx.json
-          cosign sign-blob --output _out/talos-amd64.spdx.json.sig --yes _out/talos-amd64.spdx.json
-          cosign sign-blob --output _out/talos-container-arm64.spdx.json.sig --yes _out/talos-container-arm64.spdx.json
-          cosign sign-blob --output _out/talos-container-amd64.spdx.json.sig --yes _out/talos-container-amd64.spdx.json
-          cosign sign-blob --output _out/talosctl-cni-bundle-amd64.tar.gz.sig --yes _out/talosctl-cni-bundle-amd64.tar.gz
-          cosign sign-blob --output _out/talosctl-cni-bundle-arm64.tar.gz.sig --yes _out/talosctl-cni-bundle-arm64.tar.gz
-          cosign sign-blob --output _out/talosctl-darwin-amd64.sig --yes _out/talosctl-darwin-amd64
-          cosign sign-blob --output _out/talosctl-darwin-arm64.sig --yes _out/talosctl-darwin-arm64
-          cosign sign-blob --output _out/talosctl-freebsd-amd64.sig --yes _out/talosctl-freebsd-amd64
-          cosign sign-blob --output _out/talosctl-freebsd-arm64.sig --yes _out/talosctl-freebsd-arm64
-          cosign sign-blob --output _out/talosctl-linux-amd64.sig --yes _out/talosctl-linux-amd64
-          cosign sign-blob --output _out/talosctl-linux-arm64.sig --yes _out/talosctl-linux-arm64
-          cosign sign-blob --output _out/talosctl-linux-armv7.sig --yes _out/talosctl-linux-armv7
-          cosign sign-blob --output _out/talosctl-windows-amd64.exe.sig --yes _out/talosctl-windows-amd64.exe
-          cosign sign-blob --output _out/talosctl-windows-arm64.exe.sig --yes _out/talosctl-windows-arm64.exe
-          cosign sign-blob --output _out/vmlinuz-amd64.sig --yes _out/vmlinuz-amd64
-          cosign sign-blob --output _out/vmlinuz-arm64.sig --yes _out/vmlinuz-arm64
+          cosign sign-blob --output-signature _out/cloud-images.json.sig --yes _out/cloud-images.json
+          cosign sign-blob --output-signature _out/initramfs-amd64.xz.sig --yes _out/initramfs-amd64.xz
+          cosign sign-blob --output-signature _out/initramfs-arm64.xz.sig --yes _out/initramfs-arm64.xz
+          cosign sign-blob --output-signature _out/metal-amd64.iso.sig --yes _out/metal-amd64.iso
+          cosign sign-blob --output-signature _out/metal-arm64.iso.sig --yes _out/metal-arm64.iso
+          cosign sign-blob --output-signature _out/metal-amd64-uki.efi.sig --yes _out/metal-amd64-uki.efi
+          cosign sign-blob --output-signature _out/metal-arm64-uki.efi.sig --yes _out/metal-arm64-uki.efi
+          cosign sign-blob --output-signature _out/metal-amd64.raw.zst.sig --yes _out/metal-amd64.raw.zst
+          cosign sign-blob --output-signature _out/metal-arm64.raw.zst.sig --yes _out/metal-arm64.raw.zst
+          cosign sign-blob --output-signature _out/talos-arm64.spdx.json.sig --yes _out/talos-arm64.spdx.json
+          cosign sign-blob --output-signature _out/talos-amd64.spdx.json.sig --yes _out/talos-amd64.spdx.json
+          cosign sign-blob --output-signature _out/talos-container-arm64.spdx.json.sig --yes _out/talos-container-arm64.spdx.json
+          cosign sign-blob --output-signature _out/talos-container-amd64.spdx.json.sig --yes _out/talos-container-amd64.spdx.json
+          cosign sign-blob --output-signature _out/talosctl-cni-bundle-amd64.tar.gz.sig --yes _out/talosctl-cni-bundle-amd64.tar.gz
+          cosign sign-blob --output-signature _out/talosctl-cni-bundle-arm64.tar.gz.sig --yes _out/talosctl-cni-bundle-arm64.tar.gz
+          cosign sign-blob --output-signature _out/talosctl-darwin-amd64.sig --yes _out/talosctl-darwin-amd64
+          cosign sign-blob --output-signature _out/talosctl-darwin-arm64.sig --yes _out/talosctl-darwin-arm64
+          cosign sign-blob --output-signature _out/talosctl-freebsd-amd64.sig --yes _out/talosctl-freebsd-amd64
+          cosign sign-blob --output-signature _out/talosctl-freebsd-arm64.sig --yes _out/talosctl-freebsd-arm64
+          cosign sign-blob --output-signature _out/talosctl-linux-amd64.sig --yes _out/talosctl-linux-amd64
+          cosign sign-blob --output-signature _out/talosctl-linux-arm64.sig --yes _out/talosctl-linux-arm64
+          cosign sign-blob --output-signature _out/talosctl-linux-armv7.sig --yes _out/talosctl-linux-armv7
+          cosign sign-blob --output-signature _out/talosctl-windows-amd64.exe.sig --yes _out/talosctl-windows-amd64.exe
+          cosign sign-blob --output-signature _out/talosctl-windows-arm64.exe.sig --yes _out/talosctl-windows-arm64.exe
+          cosign sign-blob --output-signature _out/vmlinuz-amd64.sig --yes _out/vmlinuz-amd64
+          cosign sign-blob --output-signature _out/vmlinuz-arm64.sig --yes _out/vmlinuz-arm64
       - name: Generate Checksums
         run: |
           cd _out
@@ -5037,8 +5037,9 @@ jobs:
           sha512sum cloud-images.json initramfs-amd64.xz initramfs-arm64.xz metal-amd64.iso metal-arm64.iso metal-amd64-uki.efi metal-arm64-uki.efi metal-amd64.raw.zst metal-arm64.raw.zst talos-arm64.spdx.json talos-amd64.spdx.json talos-container-arm64.spdx.json talos-container-amd64.spdx.json talosctl-cni-bundle-amd64.tar.gz talosctl-cni-bundle-arm64.tar.gz talosctl-darwin-amd64 talosctl-darwin-arm64 talosctl-freebsd-amd64 talosctl-freebsd-arm64 talosctl-linux-amd64 talosctl-linux-arm64 talosctl-linux-armv7 talosctl-windows-amd64.exe talosctl-windows-arm64.exe vmlinuz-amd64 vmlinuz-arm64 > sha512sum.txt
       - name: Sign checksums
         run: |
-          cosign sign-blob --output sha256sum.txt.sig --yes sha256sum.txt
-          cosign sign-blob --output sha512sum.txt.sig --yes sha512sum.txt
+          cd _out
+          cosign sign-blob --output-signature sha256sum.txt.sig --yes sha256sum.txt
+          cosign sign-blob --output-signature sha512sum.txt.sig --yes sha512sum.txt
       - name: release
         uses: crazy-max/ghaction-github-release@v2
         with:
