feat: update etcd to v3.5.22
See https://github.com/etcd-io/etcd/releases/tag/v3.5.22

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -21,6 +21,7 @@ preface = """
 Linux: 6.12.38
 Kubernetes: 1.34.0-beta.0
 runc: 1.3.0
+etcd: 3.5.22
 containerd: 2.1.3
 Flannel CNI plugin: 1.7.1-flannel1
 Flannel: 0.27.2
