--- a/.github/workflows/integration-aws-cron.yaml
+++ b/.github/workflows/integration-aws-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-07-21T09:52:07Z by kres b869533.
+# Generated on 2025-07-23T09:52:29Z by kres 4c6b4c0.
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -121,6 +121,7 @@ jobs:
           terraform_wrapper: "false"
       - name: tf apply
         env:
+          AWS_REGION: us-west-2
           TF_E2E_ACTION: apply
           TF_E2E_TEST_TYPE: aws
           TF_SCRIPT_DIR: _out/contrib
@@ -132,6 +133,7 @@ jobs:
       - name: tf destroy
         if: always()
         env:
+          AWS_REGION: us-west-2
           TF_E2E_ACTION: destroy
           TF_E2E_REFRESH_ON_DESTROY: "false"
           TF_E2E_TEST_TYPE: aws
