feat: unify disk encryption configuration
Deprecate/hide old v1alpha1 disk encryption config, and move to
unified approach via `VolumeConfig` resource.

Allow only encryption configuration for `STATE` (for now).

Fixes #10749

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -137,6 +137,13 @@ This API allows to downgrade ETCD cluster (storage format) to a previous version
 Talos increases the boot partition size to 2 GiB to accommodate larger images (with many system extensions included).
 """
 
+    [notes.disk-encryption]
+        title = "Disk Encryption"
+        description = """\ 
+Disk encryption for system volumes is now managed by the `VolumeConfig` machine configuration document.
+Legacy configuration in `valpha1` machine configuration is still supported.
+"""
+
 [make_deps]
 
     [make_deps.tools]
