--- a/hack/release.toml
+++ b/hack/release.toml
@@ -134,6 +134,14 @@ Disk encryption for system volumes is now managed by the `VolumeConfig` machine 
 Legacy configuration in `valpha1` machine configuration is still supported.
 """
 
+    [notes.early-config]
+        title = "Early Inline Configuration"
+        description = """\
+Talos now supports passing early inline configuration via the `talos.config.early` kernel parameter.
+This allows to pass the configuration before the platform config source is probed, which is useful for early boot configuration.
+The value of this parameter has same format as the `talos.config.inline` parameter, i.e. it should be base64 encoded and zstd-compressed.
+"""
+
 [make_deps]
 
     [make_deps.tools]
