--- a/internal/app/machined/pkg/controllers/k8s/internal/k8stemplates/testdata/csr-renewal-role-binding.yaml
+++ b/internal/app/machined/pkg/controllers/k8s/internal/k8stemplates/testdata/csr-renewal-role-binding.yaml
@@ -2,11 +2,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: system-bootstrap-node-renewal
-subjects:
-- kind: Group
-  name: system:nodes
-  apiGroup: rbac.authorization.k8s.io
 roleRef:
+  apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: system:certificates.k8s.io:certificatesigningrequests:selfnodeclient
-  apiGroup: rbac.authorization.k8s.io
+subjects:
+- apiGroup: rbac.authorization.k8s.io
+  kind: Group
+  name: system:nodes
